service.yaml
apiVersion: v1
kind: Service
metadata:
  name: label-studio-service
  labels:
    app: label-studio
spec:
  type: ClusterIP  
  selector:
    app: label-studio
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
